--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "sass-loader": "^10.1.0",
     "sass-rem": "^2.0.1",
     "vue": "^2.6.11",
+    "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
   },
   "devDependencies": {
